--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,10 +3,7 @@
         "browser": true,
         "es2021": true
     },
-    "extends": [
-        "airbnb-base",
-        "prettier"
-    ],
+    "extends": "airbnb-base",
     "overrides": [
     ],
     "parserOptions": {
@@ -14,6 +11,6 @@
         "sourceType": "module"
     },
     "rules": {
-        "no-console": "off"
+        "no-console":"off"
     }
 }
