removed readme from the end of homepage within package.json

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "webpack --watch",
     "start": "webpack serve --open",
     "server": "node server.js",
-    "build": "webpack"
+    "build": "webpack",
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,7 @@
   "bugs": {
     "url": "https://github.com/aaronjr/battleship/issues"
   },
-  "homepage": "https://github.com/aaronjr/battleship#readme",
+  "homepage": "https://github.com/aaronjr/battleship",
   "devDependencies": {
     "@babel/core": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
